# stabby

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release.py  repr-stabby.md
.github/workflows/: ci.yml
examples/dynlinkage/: Cargo.toml  build.rs
examples/dynlinkage/src/: main.rs
examples/libloading/: Cargo.toml
examples/libloading/src/: main.rs
stabby/: Cargo.toml  README.md  TUTORIAL.md  build.rs
stabby-abi/: Cargo.toml  build.rs
stabby-abi/src/: as_mut.rs  checked_import.rs  closure.rs  compiler_version.rs  enums.rs  fatptr.rs  future.rs  istabilize.rs  istable.rs  iter.rs  lib.rs  num.rs  option.rs  padding.rs  report.rs  result.rs  slice.rs  stable_impls.rs  str.rs  vtable.rs
stabby-abi/src/alloc/: boxed.rs  libc_alloc.rs  mod.rs  single_or_vec.rs  string.rs  sync.rs  vec.rs
stabby-abi/src/alloc/allocators/: btree_alloc.rs  freelist_alloc.rs  libc_alloc.rs  mod.rs  rust_alloc.rs
stabby-abi/src/alloc/collections/: arc_btree.rs  mod.rs
stabby-abi/src/allocs/: boxed.rs  mod.rs  sync.rs
stabby-abi/src/enums/: err_non_empty.rs  err_size_0.rs  mod.rs
stabby-abi/src/stabilized_traits/: iterator.rs
stabby-abi/src/stable_impls/: abi_stable.rs  mod.rs
stabby-abi/src/typenum2/: mod.rs  unsigned.rs
stabby-abi/src/vtable/: mod.rs
stabby-macros/: Cargo.toml  build.rs
stabby-macros/src/: enums.rs  functions.rs  gen_closures.rs  lib.rs  structs.rs  traits.rs  tyops.rs  unions.rs  utils.rs
stabby-traits/: Cargo.toml
stabby-traits/src/: lib.rs  stable_impls.rs  type_layouts.rs
stabby/benches/: allocators.rs  boxed_slices.rs  dynptr.rs  enums.rs
stabby/examples/: functions.rs  loader.rs
stabby/src/: compiler_version.rs  lib.rs  libloading.rs  map.rs  option.rs  result.rs  slice.rs  str.rs  tests.rs  time.rs  tuple.rs
stabby/src/abi/: enums.rs  fatptr.rs  istabilize.rs  istable.rs  mod.rs  padding.rs  stable_impls.rs  vtable.rs
stabby/src/abi/typenum2/: unsigned.rs
stabby/src/allocs/: borrow.rs  boxed.rs  mod.rs  string.rs  sync.rs  vec.rs
stabby/src/realloc/: boxed.rs  libc_alloc.rs  mod.rs  sync.rs  vec.rs
stabby/src/tests/: enums.rs  layouts.rs  traits.rs
stabby/src/tests/regressions/: issue_103.rs  issue_112.rs
stabby/src/type_layouts/: fatptr.rs  istabilize.rs  istable.rs  mod.rs  stable_impls.rs  vtable.rs
stabby/tests/: enums.rs  functions.rs  layouts.rs  traits.rs
typenum2/: Cargo.toml  build.rs
typenum2/src/: lib.rs  unsigned.rs
