#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   Pierre Avital, <pierre.avital@me.com>
#

[workspace]
members = [
	"stabby-macros",
	"stabby",
	"stabby-abi",
	"examples/library",
	"examples/libloading",
	"examples/dynlinkage",
]
resolver = "2"

[profile.dev]
opt-level = 3


[workspace.package]
authors = ["Pierre Avital <pierre.avital@gmail.com>"]
license = " EPL-2.0 OR Apache-2.0"
categories = ["development-tools::ffi", "no-std::no-alloc"]
repository = "https://github.com/ZettaScaleLabs/stabby"
readme = "stabby/README.md"
version = "6.2.1"                                           # Track

[workspace.dependencies]
stabby-macros = { path = "./stabby-macros/", version = "6.2.1", default-features = false } # Track
stabby-abi = { path = "./stabby-abi/", version = "6.2.1", default-features = false }       # Track
stabby = { path = "./stabby/", version = "6.2.1", default-features = false }               # Track

abi_stable = "0.11.2"
criterion = "0.5.1"
lazy_static = "1.4.0"
libc = "0.2"
libloading = "0.8"
proc-macro2 = "1.0"
proc-macro-crate = "3.1.0"
quote = "1.0"
rand = "0.8.5"
rustversion = "1.0"
sha2-const-stable = "0.1.0"
serde = "1.0.203"
smol = "2.0.0"
syn = "1.0"
