#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   Pierre Avital, <pierre.avital@me.com>
#

[package]
name = "stabby-abi"
version = "3.0.2"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
description = "stabby's core ABI, you shouldn't add this crate to your dependencies, only `stabby`."

[features]
default = ["std"]
std = ["libc"]
libc = ["dep:libc"]

abi_stable = ["dep:abi_stable"]
abi_stable-channels = ["abi_stable", "abi_stable/channels"]

# Since there currently isn't any way to construct guaranteed ABI-stable wakers from `core::task::Waker`
# `stabby::future::Future::poll` may need to allocate in order to provide stable wakers.
# If you're confident enough that `core::task::Waker`'s ABI will not change between your targetted versions
# of rustc, you may enable this feature to pass them across the FFI boundary directly.
# unsafe_wakers = [] # unsafe_wakers is no longer a feature, but a compile option: you can enable them using `RUST_FLAGS='--cfg unsafe_wakers="true"'`

[dependencies]
stabby-macros = { path = "../stabby-macros/", version = "3.0.2" }
abi_stable = { version = "0.11.2", optional = true }
libc = { version = "0.2", optional = true }
rustversion = "1.0"
sha2-const-stable = "0.1.0"

[dev-dependencies]
rand = "0.8.5"
