[package]
name = "stabby-macros"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[dependencies]
proc-macro2 = "1.0"
proc-macro-crate = "1.3"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true
