#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   Pierre Avital, <pierre.avital@me.com>
#

[package]
name = "stabby-macros"
version = { workspace = true }
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
description = "the macros that make working with stabby possible, you shouldn't add this crate to your dependencies, only `stabby`."

[dependencies]
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
rand = { workspace = true }

[lib]
proc-macro = true
