[package]
name = "stabby-traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
std = ["alloc"]
alloc = []

[dependencies]
stabby-macros = { path = "../stabby-macros/" }
typenum = "1.16"
