#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   Pierre Avital, <pierre.avital@me.com>
#

[package]
name = "stabby"
version = "3.0.3-rc"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
description = "A Stable ABI for Rust with compact sum-types."

[features]
default = ["std", "libc"]
std = ["libc"]
libloading = ["dep:libloading", "std"]
libc = ["stabby-abi/libc"]

[dependencies]
stabby-abi = { path = "../stabby-abi/", version = "3.0.3-rc" }

lazy_static = "1.4.0"
libloading = { version = "0.8", optional = true }
rustversion = "1.0"

[dev-dependencies]
smol = "1.3"
