#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   Pierre Avital, <pierre.avital@me.com>
#

[package]
name = "stabby"
version = { workspace = true }
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
description = "A Stable ABI for Rust with compact sum-types."

[lints]
workspace = true

[features]
default = ["std"]
std = ["stabby-abi/std", "alloc-rs"]
alloc-rs = ["stabby-abi/alloc-rs"]
experimental-ctypes = ["stabby-abi/experimental-ctypes"]
libloading = ["dep:libloading", "std"]
libc = ["stabby-abi/libc"]
serde = ["stabby-abi/serde"]

[dependencies]
stabby-abi = { workspace = true, default-features = false }

libloading = { workspace = true, optional = true }
rustversion = { workspace = true }

[dev-dependencies]
smol = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
stabby-abi = { workspace = true, features = ["test"] }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[[bench]]
name = "dynptr"
harness = false

[[bench]]
name = "boxed_slices"
harness = false

[[bench]]
name = "enums"
harness = false


[[bench]]
name = "allocators"
harness = false
required-features = ["libc"]
